<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/icon1">

    <TextView
        android:id="@+id/app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="𝕄𝕖𝕞𝕠𝕣𝕪"

        android:textColor="#68D56D"

        android:textSize="@dimen/_40sdp"

        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/app_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="𝔾𝔸𝕞𝕖"

        android:textColor="#68D56D"

        android:textSize="@dimen/_40sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/btnAbout"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_gravity="center"

        android:background="@drawable/uzun_button"
        android:gravity="center"
        android:paddingBottom="@dimen/_15sdp"
        android:text="@string/about"
        android:textColor="#6C6A6A"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:layout_constraintTop_toBottomOf="@id/btnPlay" />

    <TextView
        android:id="@+id/btnExit"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_80sdp"
        android:text="@string/exit"
        android:background="@drawable/uzun_button"
        android:layout_gravity="center"
        android:layout_marginBottom="176dp"
        android:gravity="center"
        android:paddingBottom="@dimen/_15sdp"
        android:textColor="#6C6A6A"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnAbout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnAbout"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/btnPlay"
        android:layout_width="@dimen/_170sdp"
        android:layout_height="@dimen/_80sdp"
        android:text="@string/play"
        android:layout_gravity="center"
        android:layout_marginTop="272dp"
        android:background="@drawable/uzun_button"
        android:gravity="center"
        android:paddingBottom="@dimen/_15sdp"
        android:textColor="#6C6A6A"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>